--- a/tests/recordings/test_share.test_get_share_stats.yaml
+++ b/tests/recordings/test_share.test_get_share_stats.yaml
@@ -4,92 +4,156 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [537cf154-e475-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:15:19 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [87821836-5a62-11e9-804e-acde48001122]
+      x-ms-date: ['Tue, 09 Apr 2019 00:58:03 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.file.core.windows.net/sharecb110cc0?restype=share
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:15:19 GMT']
-      ETag: ['"0x8D6469937C3C654"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:15:19 GMT']
+      Content-Length: ['0']
+      Date: ['Tue, 09 Apr 2019 00:58:03 GMT']
+      ETag: ['"0x8D6BC866BDD897C"']
+      Last-Modified: ['Tue, 09 Apr 2019 00:58:04 GMT']
       Server: [Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [d289a18b-b01a-001e-4782-7815c6000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [96882570-401a-00f7-7a6f-ee723f000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [87ac6ae6-5a62-11e9-804e-acde48001122]
+      x-ms-date: ['Tue, 09 Apr 2019 00:58:04 GMT']
+      x-ms-version: ['2018-11-09']
+    method: GET
+    uri: https://storagename.file.core.windows.net/sharecb110cc0?restype=share&comp=stats
+  response:
+    body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><ShareStats><ShareUsageBytes>0</ShareUsageBytes></ShareStats>"}
+    headers:
+      Content-Type: [application/xml]
+      Date: ['Tue, 09 Apr 2019 00:58:03 GMT']
+      Server: [Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0]
+      Transfer-Encoding: [chunked]
+      Vary: [Origin]
+      x-ms-request-id: [96882573-401a-00f7-7b6f-ee723f000000]
+      x-ms-version: ['2018-11-09']
+    status: {code: 200, message: OK}
+- request:
+    body: null
+    headers:
+      Connection: [keep-alive]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [87b282a0-5a62-11e9-804e-acde48001122]
+      x-ms-date: ['Tue, 09 Apr 2019 00:58:04 GMT']
+      x-ms-version: ['2018-11-09']
+    method: GET
+    uri: https://storagename.file.core.windows.net/sharecb110cc0?restype=share&comp=stats
+  response:
+    body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><ShareStats><ShareUsageBytes>0</ShareUsageBytes></ShareStats>"}
+    headers:
+      Content-Type: [application/xml]
+      Date: ['Tue, 09 Apr 2019 00:58:03 GMT']
+      Server: [Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0]
+      Transfer-Encoding: [chunked]
+      Vary: [Origin]
+      x-ms-request-id: [96882574-401a-00f7-7c6f-ee723f000000]
+      x-ms-version: ['2018-11-09']
+    status: {code: 200, message: OK}
+- request:
+    body: null
+    headers:
+      Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [5394ef48-e475-11e8-9ac5-acde48001122]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [87b6cd92-5a62-11e9-804e-acde48001122]
       x-ms-content-length: ['11']
-      x-ms-date: ['Fri, 09 Nov 2018 23:15:19 GMT']
+      x-ms-date: ['Tue, 09 Apr 2019 00:58:04 GMT']
       x-ms-type: [file]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.file.core.windows.net/sharecb110cc0/file1
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:15:19 GMT']
-      ETag: ['"0x8D6469937C8EC57"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:15:19 GMT']
+      Content-Length: ['0']
+      Date: ['Tue, 09 Apr 2019 00:58:03 GMT']
+      ETag: ['"0x8D6BC866BED1D88"']
+      Last-Modified: ['Tue, 09 Apr 2019 00:58:04 GMT']
       Server: [Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [d289a18e-b01a-001e-4882-7815c6000000]
+      x-ms-request-id: [96882575-401a-00f7-7d6f-ee723f000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: hello world
     headers:
       Connection: [keep-alive]
       Content-Length: ['11']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [539d5b6a-e475-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:15:19 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [87bc5e2e-5a62-11e9-804e-acde48001122]
+      x-ms-date: ['Tue, 09 Apr 2019 00:58:04 GMT']
       x-ms-range: [bytes=0-10]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
       x-ms-write: [update]
     method: PUT
     uri: https://storagename.file.core.windows.net/sharecb110cc0/file1?comp=range
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [XrY7u+Ae7tCTyyK7j1rNww==]
-      Date: ['Fri, 09 Nov 2018 23:15:19 GMT']
-      ETag: ['"0x8D6469937D1C832"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:15:19 GMT']
+      Date: ['Tue, 09 Apr 2019 00:58:03 GMT']
+      ETag: ['"0x8D6BC866BF275B1"']
+      Last-Modified: ['Tue, 09 Apr 2019 00:58:04 GMT']
       Server: [Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [d289a18f-b01a-001e-4982-7815c6000000]
+      x-ms-request-id: [96882576-401a-00f7-7e6f-ee723f000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [53a4b37e-e475-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:15:20 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [87c142fe-5a62-11e9-804e-acde48001122]
+      x-ms-date: ['Tue, 09 Apr 2019 00:58:04 GMT']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.file.core.windows.net/sharecb110cc0?restype=share&comp=stats
   response:
-    body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><ShareStats><ShareUsage>1</ShareUsage></ShareStats>"}
+    body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><ShareStats><ShareUsageBytes>11</ShareUsageBytes></ShareStats>"}
     headers:
       Content-Type: [application/xml]
-      Date: ['Fri, 09 Nov 2018 23:15:20 GMT']
+      Date: ['Tue, 09 Apr 2019 00:58:03 GMT']
       Server: [Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0]
       Transfer-Encoding: [chunked]
-      x-ms-request-id: [d289a190-b01a-001e-4a82-7815c6000000]
-      x-ms-version: ['2018-03-28']
+      Vary: [Origin]
+      x-ms-request-id: [96882577-401a-00f7-7f6f-ee723f000000]
+      x-ms-version: ['2018-11-09']
+    status: {code: 200, message: OK}
+- request:
+    body: null
+    headers:
+      Connection: [keep-alive]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [87c59458-5a62-11e9-804e-acde48001122]
+      x-ms-date: ['Tue, 09 Apr 2019 00:58:04 GMT']
+      x-ms-version: ['2018-11-09']
+    method: GET
+    uri: https://storagename.file.core.windows.net/sharecb110cc0?restype=share&comp=stats
+  response:
+    body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><ShareStats><ShareUsageBytes>11</ShareUsageBytes></ShareStats>"}
+    headers:
+      Content-Type: [application/xml]
+      Date: ['Tue, 09 Apr 2019 00:58:04 GMT']
+      Server: [Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0]
+      Transfer-Encoding: [chunked]
+      Vary: [Origin]
+      x-ms-request-id: [96882578-401a-00f7-806f-ee723f000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 version: 1
